tests/snapshots/parser_snapshots__parser_all@ast-3.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/language/03_functions.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Import(
                    ImportDecl {
                        module: "of:core",
                        symbols: Named(
                            [
                                ImportSymbol {
                                    name: "print",
                                    alias: None,
                                },
                            ],
                        ),
                    },
                ),
                span: Span {
                    line: 1,
                    col: 7,
                    len: 6,
                },
            },
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "add",
                        has_self_param: false,
                        is_extern: false,
                        generics: [],
                        return_type: Some(
                            Primitive(
                                Int64,
                            ),
                        ),
                        params: [
                            ParamDecl {
                                name: "a",
                                ty: Primitive(
                                    Int64,
                                ),
                                is_pointer: false,
                            },
                            ParamDecl {
                                name: "b",
                                ty: Primitive(
                                    Int64,
                                ),
                                is_pointer: false,
                            },
                        ],
                        body: Some(
                            Block {
                                statements: [],
                                returns: Some(
                                    BinaryOp(
                                        Variable(
                                            "a",
                                        ),
                                        Add,
                                        Variable(
                                            "b",
                                        ),
                                    ),
                                ),
                            },
                        ),
                        span: Span {
                            line: 3,
                            col: 9,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 3,
                    col: 9,
                    len: 8,
                },
            },
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "get_ratio",
                        has_self_param: false,
                        is_extern: false,
                        generics: [],
                        return_type: Some(
                            Primitive(
                                Float64,
                            ),
                        ),
                        params: [
                            ParamDecl {
                                name: "current",
                                ty: Primitive(
                                    Float64,
                                ),
                                is_pointer: false,
                            },
                            ParamDecl {
                                name: "total",
                                ty: Primitive(
                                    Float64,
                                ),
                                is_pointer: false,
                            },
                        ],
                        body: Some(
                            Block {
                                statements: [
                                    Expr(
                                        If(
                                            BinaryOp(
                                                Variable(
                                                    "total",
                                                ),
                                                Eq,
                                                Literal(
                                                    Float(
                                                        "0.0",
                                                    ),
                                                ),
                                            ),
                                            Block {
                                                statements: [
                                                    Return(
                                                        Some(
                                                            Literal(
                                                                Float(
                                                                    "0.0",
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                ],
                                                returns: None,
                                            },
                                            None,
                                        ),
                                    ),
                                ],
                                returns: Some(
                                    BinaryOp(
                                        Variable(
                                            "current",
                                        ),
                                        Div,
                                        Variable(
                                            "total",
                                        ),
                                    ),
                                ),
                            },
                        ),
                        span: Span {
                            line: 7,
                            col: 9,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 7,
                    col: 9,
                    len: 8,
                },
            },
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "main",
                        has_self_param: false,
                        is_extern: false,
                        generics: [],
                        return_type: Some(
                            Primitive(
                                Int64,
                            ),
                        ),
                        params: [],
                        body: Some(
                            Block {
                                statements: [
                                    Expr(
                                        Call(
                                            Variable(
                                                "print",
                                            ),
                                            [],
                                            [
                                                As(
                                                    Call(
                                                        Variable(
                                                            "add",
                                                        ),
                                                        [],
                                                        [
                                                            Literal(
                                                                Int(
                                                                    "2",
                                                                ),
                                                            ),
                                                            Literal(
                                                                Int(
                                                                    "3",
                                                                ),
                                                            ),
                                                        ],
                                                    ),
                                                    Primitive(
                                                        String,
                                                    ),
                                                ),
                                            ],
                                        ),
                                    ),
                                    Expr(
                                        Call(
                                            Variable(
                                                "print",
                                            ),
                                            [],
                                            [
                                                As(
                                                    Call(
                                                        Variable(
                                                            "get_ratio",
                                                        ),
                                                        [],
                                                        [
                                                            Literal(
                                                                Float(
                                                                    "1.0",
                                                                ),
                                                            ),
                                                            Literal(
                                                                Float(
                                                                    "0.0",
                                                                ),
                                                            ),
                                                        ],
                                                    ),
                                                    Primitive(
                                                        String,
                                                    ),
                                                ),
                                            ],
                                        ),
                                    ),
                                    Expr(
                                        Call(
                                            Variable(
                                                "print",
                                            ),
                                            [],
                                            [
                                                As(
                                                    Call(
                                                        Variable(
                                                            "get_ratio",
                                                        ),
                                                        [],
                                                        [
                                                            Literal(
                                                                Float(
                                                                    "3.0",
                                                                ),
                                                            ),
                                                            Literal(
                                                                Float(
                                                                    "4.0",
                                                                ),
                                                            ),
                                                        ],
                                                    ),
                                                    Primitive(
                                                        String,
                                                    ),
                                                ),
                                            ],
                                        ),
                                    ),
                                ],
                                returns: Some(
                                    Literal(
                                        Int(
                                            "0",
                                        ),
                                    ),
                                ),
                            },
                        ),
                        span: Span {
                            line: 14,
                            col: 9,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 14,
                    col: 9,
                    len: 8,
                },
            },
        ],
    },
)
