tests/snapshots/parser_snapshots__parser_all@ast-30.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/lexer/escaped_quote_is_kept_inside_string.of
---
Err(
    "unexpected token string literal",
)
