tests/snapshots/parser_snapshots__parser_all@ast-31.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/lexer/identifier_is_scanned.of
---
Err(
    "unexpected token identifier 'hello'",
)
