tests/snapshots/parser_snapshots__parser_all@ast-33.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/lexer/identifier_with_underscore_dollar_and_digits_is_scanned.of
---
Err(
    "unexpected token identifier '_value$123'",
)
