tests/snapshots/parser_snapshots__parser_all@ast-35.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/lexer/non_keyword_literal_becomes_identifier.of
---
Err(
    "unexpected token identifier 'structure'",
)
