tests/snapshots/parser_snapshots__parser_all@ast-38.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/lexer/punctuation_tokens_are_recognized.of
---
Err(
    "unexpected token '('",
)
