tests/snapshots/parser_snapshots__parser_all@ast-4.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/language/04_lambdas.of
---
Err(
    "unexpected token 'function'",
)
