tests/snapshots/parser_snapshots__parser_all@ast-41.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/lexer/scan_number_invalid_float_none_after_dot.of
---
Err(
    "invalid number literal '123.'",
)
