tests/snapshots/parser_snapshots__parser_all@ast-43.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/lexer/scan_number_valid_int.of
---
Err(
    "unexpected token integer '123'",
)
