tests/snapshots/parser_snapshots__parser_all@ast-44.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/lexer/slash_starts_comment_when_followed_by_slash.of
---
Err(
    "unexpected token comment",
)
